# abdwr-python

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: appendix_a_retrosheet.md  appendix_b_pitchfx.md  appendix_c_statcast.md  ch01_baseball_datasets.html  ch01_baseball_datasets.md  ch02_introduction_to_python.md  ch03_graphics.md  ch04_runs_and_wins.md  ch05_run_expectancy.md  ch06_balls_and_strikes.md  ch07_catcher_framing.md  ch08_career_trajectories.md  ch09_simulation.md  ch10_streaky_performances.md  ch11_park_factors.md  ch12_large_data.md  ch13_home_run_hitting.md  ch14_scientific_presentation.md  ch15_marimo_apps.md
notebooks/: ch01_baseball_datasets.py  ch02_introduction_to_python.py  ch03_graphics.py  ch04_runs_and_wins.py  ch05_run_expectancy.py  ch06_balls_and_strikes.py  ch07_catcher_framing.py  ch08_career_trajectories.py  ch09_simulation.py  ch10_streaky_performances.py  ch11_park_factors.py  ch12_large_data.py  ch13_home_run_hitting.py  ch14_scientific_presentation.py  ch15_marimo_apps.py
src/baseball/: __init__.py  data.py  utils.py
