[project]
name = "abdwr-python"
version = "0.1.0"
description = "Analyzing Baseball Data with R — Python reproduction (3rd ed.)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo[sql]>=0.9",
    "pandas>=2.2",
    "polars>=1.0",
    "pybaseball>=2.2",
    "plotly>=5.0",
    "altair>=5.0",
    "duckdb>=1.0",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "pyarrow>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "watchdog>=4.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
